# libgoboard

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: board_test.cpp
src/board/: basic.hpp  board_class.hpp  grid_point.hpp  group_node.hpp  pos_group.hpp
src/message/: README.md  message.proto
